--- a/Freedom.BusinessLogic/Freedom.BusinessLogic.csproj
+++ b/Freedom.BusinessLogic/Freedom.BusinessLogic.csproj
@@ -3,8 +3,12 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Freedom.Database\Freedom.Database.csproj" />
