--- a/Freedom.WebAdmin/Freedom.WebAdmin.csproj
+++ b/Freedom.WebAdmin/Freedom.WebAdmin.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.Toast" Version="4.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
@@ -16,9 +17,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Syncfusion.Blazor" Version="27.1.51" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Freedom.BusinessLogic\Freedom.BusinessLogic.csproj" />
     <ProjectReference Include="..\Freedom.Model\Freedom.Model.csproj" />
     <ProjectReference Include="..\Freedom.ServiceDefaults\Freedom.ServiceDefaults.csproj" />
   </ItemGroup>
